--- a/MobileSafe/res/layout/activity_safe.xml
+++ b/MobileSafe/res/layout/activity_safe.xml
@@ -1,12 +1,128 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
+    android:orientation="vertical" >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:id="@+id/tv1"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:background="#66c0f9"
+        android:gravity="center"
+        android:text="@string/safe"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:layout_marginTop="8dip"
+            android:text="安全号码"
+            android:textColor="#99000000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/safe_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dip"
+            android:layout_marginTop="8dip"
+            android:text="未设置"
+            android:textColor="#88000000"
+            android:textSize="20sp" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="0.2dip"
+        android:layout_marginTop="10dip"
+        android:background="#44000000" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:layout_marginTop="8dip"
+            android:text="防盗保护是否开启"
+            android:textColor="#99000000"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/img_lock"
+            android:layout_width="25dip"
+            android:layout_height="25dip"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dip"
+            android:layout_marginTop="8dip"
+            android:src="@drawable/unlock"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="0.2dip"
+        android:layout_marginTop="10dip"
+        android:background="#44000000" />
+
+    <TextView
+        android:background="@drawable/shape_selector"
+        android:clickable="true"
+        android:onClick="reEnterSetup"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dip"
+        android:layout_marginTop="8dip"
+        android:text="重新进入设置向导"
+        android:textColor="#99000000"
+        android:textSize="20sp" 
+        android:drawableRight="@drawable/enter_setup"
+        />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="0.2dip"
+        android:layout_marginTop="5dip"
+        android:background="#44000000" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dip"
+        android:layout_marginTop="8dip"
+        android:text="功能简介:"
+        android:textColor="#99000000"
+        android:textSize="20sp" />
+    
+     <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@drawable/star_on"
+        android:text="GPS追踪:#*location*#" />
+
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@drawable/star_on"
+        android:text="播放报警音乐：#*alarm*#" />
+
+
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@drawable/star_on"
+        android:text="远程数据销毁:#*wipedata*#" />
+
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@drawable/star_on"
+        android:text="远程锁屏:#*lockscreen*#" />
+    
+</LinearLayout>
