--- a/MobileSafe/res/values/attrs.xml
+++ b/MobileSafe/res/values/attrs.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="CustomView">
-        <attr name="myTitle" format="string"/>
-        <attr name="desc_on" format="string"/>
-        <attr name="desc_off" format="string"/>
+
+    <declare-styleable name="TextView">
+        <attr name="myTitle" format="string" />
+        <attr name="desc_on" format="string" />
+        <attr name="desc_off" format="string" />
     </declare-styleable>
+
 </resources>
