安全卫士 增加了电话号码归属地查询。准备来电自动查询。

--- a/MobileSafe/res/layout/setting_swichitem.xml
+++ b/MobileSafe/res/layout/setting_swichitem.xml
@@ -26,6 +26,7 @@
     <CheckBox
         android:clickable="false"
         android:focusable="false"
+        android:checked="true"
         android:id="@+id/cb_status"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
