--- a/MobileSafe/res/layout/my_toast.xml
+++ b/MobileSafe/res/layout/my_toast.xml
@@ -4,18 +4,21 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal"
-    android:background="#55FFFFFF"
+    android:background="@drawable/toast_bg"
     >
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
         android:src="@drawable/toast" 
         />
     
-    <TextView 
+    <TextView
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
+    	android:layout_marginRight="5dp"
     	android:textSize="18dp"
     	android:textColor="#000000"
     	android:text="11111111111111"
