--- a/MobileSafe/res/layout/my_toast.xml
+++ b/MobileSafe/res/layout/my_toast.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_bg"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal"
-    android:background="@drawable/toast_bg"
+    android:background="@drawable/call_locate_white"
     >
 
     <ImageView
