--- a/MobileSafe/res/layout/activity_splash.xml
+++ b/MobileSafe/res/layout/activity_splash.xml
@@ -9,7 +9,9 @@
         android:id="@+id/splash_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom = "100dp"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:shadowColor="@android:color/darker_gray"
