--- a/MobileSafe/res/layout/dialog_setup_password.xml
+++ b/MobileSafe/res/layout/dialog_setup_password.xml
@@ -32,23 +32,28 @@
 
     <LinearLayout
         android:layout_width="300dip"
+        android:layout_marginTop="30dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <Button
-               android:background="@drawable/button_select"
+            android:background="@drawable/button_select"
             android:id="@+id/ok"
-            android:layout_width="140dip"
+            android:layout_width="100dip"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:text="确定" />
 
         <Button
-               android:background="@drawable/button_select"
+            android:background="@drawable/button_select"
             android:id="@+id/cancel"
-            android:layout_width="140dip"
+            android:layout_width="100dip"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="取消" />
     </LinearLayout>
-
 </LinearLayout>
