--- a/AndroidThreadDemo2/res/layout/activity_main.xml
+++ b/AndroidThreadDemo2/res/layout/activity_main.xml
@@ -28,5 +28,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Handler Post" />
+    
+    
+    <Button
+        android:id="@+id/star"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="子线程开始" />
+    
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="子线程结束" />
 
 </LinearLayout>
