--- a/MobileSafe/res/layout/appmanager_popuwindow.xml
+++ b/MobileSafe/res/layout/appmanager_popuwindow.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal" >
 
     <LinearLayout
+        android:id="@+id/ll_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -26,6 +27,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_uninstall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -46,6 +48,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
