--- a/新闻客户端/res/layout/activity_main.xml
+++ b/新闻客户端/res/layout/activity_main.xml
@@ -3,19 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    
     >
-    
     <FrameLayout 
         android:id="@+id/content"
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
+    	android:layout_weight="1.0"
         >
-       
     </FrameLayout>
-    
-    <FrameLayout 
-        
-        ></FrameLayout>
-    
+
 </LinearLayout>
