--- a/USB_HID/res/layout/activity_main.xml
+++ b/USB_HID/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:hint="数据个数"/>
+            android:hint="收到的数据"/>
 
         
         <Button
